# bodgestr

./: .gitignore  Cargo.toml  Makefile  README.md  rustfmt.toml
.config/: nextest.toml
.github/workflows/: ci.yml
config/: gestures.example.toml
debian/: changelog  control  copyright  postinst  preinst  rules
src/: config.rs  event.rs  lib.rs  main.rs  manager.rs  recognizer.rs
tests/: test_config.rs  test_event.rs  test_recognizer.rs
