[package]
name = "bodgestr"
version = "1.0.0"
edition = "2024"
rust-version = "1.85"
description = "Gesture recognition for Linux touchscreens"
license = "MIT"
authors = ["bodgestr contributors"]

[dependencies]
evdev = "0.12"
log = { version = "0.4", features = ["std"] }
clap = { version = "4", features = ["derive"] }
ctrlc = "3.4"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
toml = "1"
strum = { version = "0.28", features = ["derive"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1

